fix wrong pheight of parallax container, and gaps between them

--- a/project/library.blocks/parallax/parallax.css
+++ b/project/library.blocks/parallax/parallax.css
@@ -1,7 +1,3 @@
 .parallax {
-    width: 50vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: transparent;
+    height: 710px;
 }
