--- a/project/project.blocks/widget/widget.css
+++ b/project/project.blocks/widget/widget.css
@@ -1,4 +1,3 @@
 .widget {
-    height: 2160px;
     width: 100vw;
 }
